# Project

./: .env.example  .gitignore  CLAUDE.md  MCP_CLIENT_README.md  MCP_SECURITY_README.md  README.md  ai_provider.py  config.py  demo_video.mov  developer1_input_handler.py  developer2_map_automation.py  developer3_main_coordinator.py  main.py  mcp_browser_server.py  mcp_client.py  mcp_client_example.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test_ai_provider.py  test_amap_mcp_client.py  test_main.py  test_mcp_browser_server.py  test_mcp_client.py  test_voice_recognizer.py  update-claude-md.patch  voice_recognizer.py  workflow-coverage-fix.patch  workflow-fix.patch
.github/workflows/: ci.yml  update-claude-md.yml
absolute/path/to/: amap_mcp_client.py
examples/: mcp_client_example.py
myenv/: pyvenv.cfg
src/: aiRouteDemo.js  aiService.js  amapClient.js  index.js
src/ai_navigator/: __init__.py  ai_context.py  ai_provider.py  amap_mcp_client.py  config.py  constants.py  main.py  mcp_browser_server.py  mcp_client.py  mcp_file_server.py  mcp_network_server.py  system_mcp_manager.py  voice_recognizer.py
src/map_navigator/: main.py
tests/: __init__.py  conftest.py  test_ai_provider.py  test_amap_mcp_client.py  test_config.py  test_integration_ai_mcp.py  test_main.py  test_mcp_browser_server.py  test_mcp_client.py  test_mcp_file_server.py  test_mcp_network_server.py  test_system_mcp_manager.py  test_voice_recognizer.py
