[project]
name = "ai-map-navigator"
version = "0.1.0"
description = "AI-driven map navigation program based on MCP (Model Context Protocol) architecture"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "anthropic>=0.18.0",
    "httpx>=0.25.0",
    "mcp>=0.9.0",
    "SpeechRecognition>=3.8.1",
    "pyaudio>=0.2.11",
    "vosk>=0.3.44",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
